--- a/public/locales/en/message_contents.json
+++ b/public/locales/en/message_contents.json
@@ -56,7 +56,8 @@
   "MsgRevokeAllowance": "<0>{{granter}}</0> revoked allowance for <1>{{grantee}}</1>",
   "MsgCreateVestingAccount": "Vesting account created for <0>{{toAddress}}</0>",
   "MsgCreatePeriodicVestingAccount": "Periodic vesting account created for <0>{{toAddress}}</0>",
-  "MsgCreateDID": "DID created <0>{{did}}</0>",
-  "MsgUpdateDID": "Update DID <0>{{did}}</0>",
-  "MsgCreateResource": "Create Resource"
+  "MsgCreateDIDDoc": "DID document created <0>{{did}}</0>",
+  "MsgUpdateDIDDoc": "DID document updated <0>{{did}}</0>",
+  "MsgDeactivateDIDDoc": "DID document deactivated <0>{{did}}</0>",
+  "MsgCreateResource": "Resource created <0>{{resource}}</0>"
 }
