--- a/apps/web-cheqd/public/locales/en/message_contents.json
+++ b/apps/web-cheqd/public/locales/en/message_contents.json
@@ -55,5 +55,9 @@
   "MsgGrantAllowance": "<0>{{granter}}</0> granted allowance for <1>{{grantee}}</1>",
   "MsgRevokeAllowance": "<0>{{granter}}</0> revoked allowance for <1>{{grantee}}</1>",
   "MsgCreateVestingAccount": "Vesting account created for <0>{{toAddress}}</0>",
-  "MsgCreatePeriodicVestingAccount": "Periodic vesting account created for <0>{{toAddress}}</0>"
+  "MsgCreatePeriodicVestingAccount": "Periodic vesting account created for <0>{{toAddress}}</0>",
+  "MsgCreateDidDoc": "DID document created <0>{{did}}</0>",
+  "MsgUpdateDIDDoc": "DID document updated <0>{{did}}</0>",
+  "MsgDeactivateDIDDoc": "DID document deactivated <0>{{did}}</0>",
+  "MsgCreateResource": "Resource created <0>{{resource}}</0>"
 }
