--- a/apps/web-cheqd/public/locales/en/transactions.json
+++ b/apps/web-cheqd/public/locales/en/transactions.json
@@ -15,6 +15,7 @@
   "none": "None",
   "bank": "Bank",
   "crisis": "Crisis",
+  "cheqd": "Cheqd",
   "distribution": "Distribution",
   "governance": "Governance",
   "slashing": "Slashing",
