--- a/apps/web-cheqd/public/locales/en/message_labels.json
+++ b/apps/web-cheqd/public/locales/en/message_labels.json
@@ -55,5 +55,9 @@
   "MsgGrantAllowance": "Grant Allowance",
   "MsgRevokeAllowance": "Revoke Allowance",
   "MsgCreateVestingAccount": "Create Vesting Account",
-  "MsgCreatePeriodicVestingAccount": "Create Periodic Vesting Account"
+  "MsgCreatePeriodicVestingAccount": "Create Periodic Vesting Account",
+  "MsgCreateDIDDoc": "Create DID Document",
+  "MsgUpdateDIDDoc": "Update DID Document",
+  "MsgDeactivateDIDDoc": "Deactivate DID Document",
+  "MsgCreateResource": "Create Resource"
 }
